# mountain-holds

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: FindStacklessPython.cmake
entities/: CMakeLists.txt
foundation/: CMakeLists.txt
foundation/include/: Logger.h  ResourceId.h  Singleton.hpp  debug.h  foundation_DLL_Export.hpp
foundation/include/foundation/: ResourceId.h  Singleton.hpp
foundation/src/: Logger.cpp  ResourceId.cpp  debug.cpp
gui/: CMakeLists.txt
map/: CMakeLists.txt
map/include/: TileType.h  map_DLL_Export.hpp
map/include/map/: Map.h  TileType.h  TileTypeDictionary.h
map/src/: Map.cpp  TileType.cpp  TileTypeDictionary.cpp
map/unit_tests/: CMakeLists.txt  MapTest.cpp  TileTypeDictionaryTest.cpp
rendering/: CMakeLists.txt
rendering/include/rendering/: Renderer.h  TextureManager.h  rendering.h  rendering_DLL_Export.hpp
rendering/src/: Renderer.cpp  TextureManager.cpp  rendering.cpp
scripting/: CMakeLists.txt
scripting/include/scripting/: ExposedModule.h  Value.h  scripting.h  scripting_DLL_Export.hpp
scripting/src/: ExposedModule.cpp  PyObjectHolder.cpp  PyObjectHolder.h  PythonUtils.cpp  PythonUtils.h  Value.cpp  scripting.cpp
scripting/unit_tests/: CMakeLists.txt  ExposedModuleTest.cpp  PyObjectHolderTest.cpp  ScriptingTest.cpp
scripting/unit_tests/data/: core.py
src/: Game.cpp  Game.h  main.cpp
